--- a/codes/GPT_2_Fine_Tuning.ipynb
+++ b/codes/GPT_2_Fine_Tuning.ipynb
@@ -10,7 +10,6 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "d702f02e6f1b4f1d86eb93116fbb6b45": {
@@ -2468,7 +2467,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eee8def6-f8a9-41f9-ae3f-9dca8fcde6ae"
+        "outputId": "944f03b0-1914-42e3-9b20-b8275b53ddc6"
       },
       "source": [
         "!pip install transformers"
@@ -2507,7 +2506,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd63241b-af14-494e-def2-5d0206a5e5ed"
+        "outputId": "18dd03e2-ba82-4412-dd93-20e2c4354452"
       },
       "source": [
         "import os\n",
@@ -2540,7 +2539,7 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ]
         },
         {
@@ -2551,7 +2550,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 11
         }
       ]
     },
@@ -2562,7 +2561,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1bc961b4-be31-4b07-c9fa-5161d88983fa"
+        "outputId": "81b1c76c-a359-41c8-e51b-d7f5047233a4"
       },
       "source": [
         "!nvidia-smi"
@@ -2573,26 +2572,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tue Jun 11 06:30:33 2024       \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
-            "|-----------------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                      |               MIG M. |\n",
-            "|=========================================+======================+======================|\n",
-            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   44C    P8              11W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
-            "|                                         |                      |                  N/A |\n",
-            "+-----------------------------------------+----------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                            |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
-            "|        ID   ID                                                             Usage      |\n",
-            "|=======================================================================================|\n",
-            "|  No running processes found                                                           |\n",
-            "+---------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ]
@@ -2621,7 +2601,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tnoWHXrM_dPs",
-        "outputId": "1a2e6717-8c46-4e0c-f86c-b2bdff22d370"
+        "outputId": "7e6d2839-8960-4af6-bb03-a9a1f340be71"
       },
       "execution_count": null,
       "outputs": [
@@ -2644,7 +2624,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ehzUHXT_f2r",
-        "outputId": "2181f58c-334f-428b-aba5-8918179b12f7"
+        "outputId": "6151d362-5ac4-464a-be58-fb723d834aed"
       },
       "execution_count": null,
       "outputs": [
@@ -2667,7 +2647,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9jiTai7x_nSA",
-        "outputId": "11aa8deb-1cc0-440d-b9de-ceeb613bd8a8"
+        "outputId": "4effa55d-73de-48fa-a0de-8365dd322073"
       },
       "execution_count": null,
       "outputs": [
@@ -2675,7 +2655,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "GPT_2_Fine_Tuning.ipynb  ra_top_1000_data_set.json\n"
+            "GPT_2_Fine_Tuning.ipynb  model_save  ra_top_1000_data_set.json\n"
           ]
         }
       ]
@@ -2687,7 +2667,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3a89fc24-7ff2-4312-e7f8-3addda2216e4"
+        "outputId": "bda121d2-fce2-4229-8665-b24c6a1a632c"
       },
       "source": [
         "# mount my Google Drive directory and access the training data located there\n",
@@ -2747,7 +2727,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "260176bc-0d42-466b-80db-eadf4342806f"
+        "outputId": "df009ce8-a9fa-4ca5-ab5c-66ff611fecc5"
       },
       "source": [
         "df.dropna(inplace=True) #remove NA values\n",
@@ -2775,7 +2755,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 14
         }
       ]
     },
@@ -2796,9 +2776,9 @@
         "id": "cKsH2sU0OCQA",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 647
+          "height": 280
         },
-        "outputId": "d4e9f2d0-ff1a-443b-d401-ab5d5ef4968a"
+        "outputId": "a91c1c43-e4dd-4162-a3e6-34a6fc80d28b"
       },
       "source": [
         "doc_lengths = []\n",
@@ -2820,7 +2800,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-10-fa091b8c73b4>:12: UserWarning: \n",
+            "<ipython-input-15-fa091b8c73b4>:12: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -2841,7 +2821,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -4587,7 +4567,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb70cddf-a94f-4270-b5dc-b132af26c378"
+        "outputId": "b1643e43-6d6e-4dc4-9f8f-4e25a335fd15"
       },
       "source": [
         "# Saving best-practices: if you use defaults names for the model, you can reload it using from_pretrained()\n",
@@ -4602,9 +4582,9 @@
         "\n",
         "# Save a trained model, configuration and tokenizer using `save_pretrained()`.\n",
         "# They can then be reloaded using `from_pretrained()`\n",
-        "model_to_save = model.module if hasattr(model, 'module') else model  # Take care of distributed/parallel training\n",
-        "model_to_save.save_pretrained(output_dir)\n",
-        "tokenizer.save_pretrained(output_dir)\n",
+        "# model_to_save = model.module if hasattr(model, 'module') else model  # Take care of distributed/parallel training\n",
+        "# model_to_save.save_pretrained(output_dir)\n",
+        "# tokenizer.save_pretrained(output_dir)\n",
         "\n",
         "# Good practice: save your training arguments together with the trained model\n",
         "# torch.save(args, os.path.join(output_dir, 'training_args.bin'))\n"
@@ -4617,20 +4597,6 @@
           "text": [
             "Saving model to ./model_save/\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "('./model_save/tokenizer_config.json',\n",
-              " './model_save/special_tokens_map.json',\n",
-              " './model_save/vocab.json',\n",
-              " './model_save/merges.txt',\n",
-              " './model_save/added_tokens.json')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
         }
       ]
     },
@@ -4693,27 +4659,38 @@
       "metadata": {
         "id": "NxlZsafTC-V5",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 193
         },
-        "outputId": "b7a46f60-2ee6-40ca-ac37-8bfa964e44c5"
+        "outputId": "d906f246-e71d-453a-e60b-395fbef55e1f"
       },
       "source": [
         "# Copy the model files to a directory in your Google Drive.\n",
-        "!cp -r ./model_save/ $data_dir\n",
+        "# !cp -r ./model_save/ $data_dir\n",
         "\n",
         "# # Load a trained model and vocabulary that you have fine-tuned\n",
-        "#model = GPT2LMHeadModel.from_pretrained(output_dir)\n",
-        "#tokenizer = GPT2Tokenizer.from_pretrained(output_dir)\n",
-        "#model.to(device)"
+        "model = GPT2LMHeadModel.from_pretrained(output_dir)\n",
+        "tokenizer = GPT2Tokenizer.from_pretrained(output_dir)\n",
+        "model.to(device)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "cp: missing destination file operand after './model_save/'\n",
-            "Try 'cp --help' for more information.\n"
+            "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'device' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-ab1d8741e64a>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGPT2LMHeadModel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_pretrained\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtokenizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGPT2Tokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_pretrained\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'device' is not defined"
           ]
         }
       ]
@@ -4732,14 +4709,15 @@
       "metadata": {
         "id": "v4XhewaV93-_",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
-        "outputId": "1a4f5b40-0052-463e-d7d7-ea7bd84e1ae3"
+        "outputId": "509de4d9-cfd4-4d08-c633-a8aa39b032be"
       },
       "source": [
         "model.eval()\n",
         "\n",
-        "prompt = \"<|startoftext|>\"\n",
+        "prompt = \"<|startoftext|> Mike was a singer\"\n",
         "\n",
         "generated = torch.tensor(tokenizer.encode(prompt)).unsqueeze(0)\n",
         "generated = generated.to(device)\n",
@@ -4762,39 +4740,14 @@
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor([[50257]], device='cuda:0')\n",
-            "0: With over a decade of experience serving as producer, label boss, and vocalist for countless underground and underground labels and record labels, Lauren Von Oswald is no stranger to crafting music for the dancefloor. A veteran DJ and label owner, Lauren has steadily risen through the ranks as one of the genre's top-ten imprints. With over a decade of experience serving as producer, label boss, and vocalist for countless underground and underground labels and record labels, Lauren Von Oswald is no stranger to crafting music for the dancefloor. \n",
-            "\n",
-            "Her DJ sets are a testament to her versatile skill and an uncanny ability to improvise, blending styles from House, Soul, Disco and House to cut through the noise to create a unique sonic identity. She also holds a master class in building a distinctive narrative from start to finish. \n",
-            "With over a decade of experience serving as producer, label boss, and vocalist for countless underground and underground labels and record labels, Lauren Von Oswald is no stranger to crafting music for the dancefloor. While she may not be the voice of the underground dance music scene at large, Lauren has developed a unique and consistent style, that stands out from the crowd. \n",
-            "\n",
-            "Von Oswald also has a long history of collaborating with DJs, performing alongside them at events including Awakenings (Berlin), Tomorrowland (New York), DC10 (NYC), and Fabric (London). \n",
-            "Her sets are built from the heart with elements of a dance\n",
-            "\n",
-            "\n",
-            "1: Yousef and Noha based, Kamen met Russian-born & Berlin-based DJ and producer, DVS1. When her first DJ gig came up in 2009, she was immediately snapped up by DJ Shiva and DVS1, soon after their first release ‘Yousef & Noha’ featured on their seminal imprint Fuse Records.\n",
-            "\n",
-            "Yousef and Noha based Kamen met while attending a Berlin club called DVS1 where they bonded over a mutual love of minimal and techno, and the two soon became inseparable, eventually getting into a shared passion for the duo’s productions.\n",
-            "\n",
-            "‘Yousef & Noha’ began their production partnership in 2011 and in 2012 they launched their own label, ‘Yousef Records’ on Fuse Records. The pair quickly built up a strong presence on the label, releasing more EPs and remixes from the likes of DVS1, Tiga, Josh Wink, and Josh Wink and developing their own sound. \n",
-            "\n",
-            "Yousef released a handful of EPs, most notably ‘Yousef & Noha’ and ‘Yousef & Noha’ on Ostgut Ton’s highly acclaimed Mp2 sublabel ‘Sick House’ in 2015. Their track ‘In Ya Head’ released on the Ostgut Ton sublabel ‘Sick House’ was also\n",
-            "\n",
-            "\n",
-            "2: No matter what the artist is doing, there will always be music and dancing going on… there's always going to be dancing to it…\n",
-            "\n",
-            "\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'device' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-4ecbf6307b6f>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mgenerated\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mgenerated\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerated\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'device' is not defined"
           ]
         }
       ]
