--- a/codes/RL_mini_game.ipynb
+++ b/codes/RL_mini_game.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f7afaf9e",
+   "id": "f5bef733",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +134,141 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d9b37d6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arcade\n",
+    "import gym\n",
+    "from gym import spaces\n",
+    "import numpy as np\n",
+    "\n",
+    "# Constants\n",
+    "SCREEN_WIDTH = 600\n",
+    "SCREEN_HEIGHT = 400\n",
+    "PADDLE_WIDTH = 100\n",
+    "PADDLE_HEIGHT = 10\n",
+    "BALL_RADIUS = 10\n",
+    "BRICK_WIDTH = 58\n",
+    "BRICK_HEIGHT = 20\n",
+    "BRICK_ROWS = 5\n",
+    "BRICK_COLS = 10\n",
+    "BRICK_PADDING = 2\n",
+    "\n",
+    "# Define a new gym environment\n",
+    "class DXBallEnv(gym.Env):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.action_space = spaces.Discrete(3)  # Left, Right, Stay\n",
+    "        self.observation_space = spaces.Box(low=0, high=SCREEN_WIDTH, shape=(4,), dtype=np.float32)\n",
+    "        \n",
+    "        self.reset()\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.paddle_x = SCREEN_WIDTH // 2\n",
+    "        self.paddle_y = 50\n",
+    "        self.ball_x = SCREEN_WIDTH // 2\n",
+    "        self.ball_y = SCREEN_HEIGHT // 2\n",
+    "        self.ball_vx = 3\n",
+    "        self.ball_vy = 3\n",
+    "        self.bricks = []\n",
+    "        self.create_bricks()\n",
+    "        self.done = False\n",
+    "        return self._get_obs()\n",
+    "\n",
+    "    def create_bricks(self):\n",
+    "        self.bricks.clear()\n",
+    "        for row in range(BRICK_ROWS):\n",
+    "            for col in range(BRICK_COLS):\n",
+    "                x = BRICK_WIDTH * col + BRICK_WIDTH // 2 + BRICK_PADDING * col\n",
+    "                y = SCREEN_HEIGHT - (BRICK_HEIGHT * row + BRICK_HEIGHT // 2 + BRICK_PADDING * row)\n",
+    "                self.bricks.append((x, y))\n",
+    "\n",
+    "    def step(self, action):\n",
+    "        # Move paddle based on action\n",
+    "        if action == 0:  # Move Left\n",
+    "            self.paddle_x -= 5\n",
+    "        elif action == 1:  # Move Right\n",
+    "            self.paddle_x += 5\n",
+    "\n",
+    "        # Keep paddle within bounds\n",
+    "        self.paddle_x = np.clip(self.paddle_x, PADDLE_WIDTH // 2, SCREEN_WIDTH - PADDLE_WIDTH // 2)\n",
+    "\n",
+    "        # Move ball\n",
+    "        self.ball_x += self.ball_vx\n",
+    "        self.ball_y += self.ball_vy\n",
+    "\n",
+    "        # Ball collision with walls\n",
+    "        if self.ball_x <= 0 or self.ball_x >= SCREEN_WIDTH:\n",
+    "            self.ball_vx *= -1\n",
+    "        if self.ball_y >= SCREEN_HEIGHT:\n",
+    "            self.ball_vy *= -1\n",
+    "\n",
+    "        # Ball collision with paddle\n",
+    "        if (self.paddle_x - PADDLE_WIDTH // 2 <= self.ball_x <= self.paddle_x + PADDLE_WIDTH // 2\n",
+    "                and self.paddle_y + PADDLE_HEIGHT >= self.ball_y - BALL_RADIUS):\n",
+    "            self.ball_vy *= -1\n",
+    "\n",
+    "        # Check if the ball falls off the screen (Game Over)\n",
+    "        if self.ball_y < 0:\n",
+    "            self.done = True\n",
+    "            reward = -1\n",
+    "        else:\n",
+    "            reward = 0\n",
+    "\n",
+    "        return self._get_obs(), reward, self.done, {}\n",
+    "\n",
+    "    def _get_obs(self):\n",
+    "        return np.array([self.paddle_x, self.ball_x, self.ball_y, self.ball_vy], dtype=np.float32)\n",
+    "\n",
+    "# Running the Environment\n",
+    "if __name__ == \"__main__\":\n",
+    "    env = DXBallEnv()\n",
+    "    obs = env.reset()\n",
+    "    \n",
+    "    for _ in range(1000):\n",
+    "        action = env.action_space.sample()  # Random action\n",
+    "        obs, reward, done, _ = env.step(action)\n",
+    "        if done:\n",
+    "            obs = env.reset()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d0153193",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "dlopen(/Users/hissain/anaconda3/lib/python3.11/site-packages/torch/_C.cpython-311-darwin.so, 2): Library not loaded: @loader_path/libtorch_cpu.dylib\n  Referenced from: /Users/hissain/anaconda3/lib/python3.11/site-packages/torch/lib/libtorch_python.dylib\n  Reason: image not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PPO\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Train the agent\u001b[39;00m\n\u001b[1;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m PPO(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMlpPolicy\u001b[39m\u001b[38;5;124m\"\u001b[39m, env, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/stable_baselines3/__init__.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01ma2c\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m A2C\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_system_info\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mddpg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DDPG\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/stable_baselines3/a2c/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01ma2c\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01ma2c\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m A2C\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01ma2c\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpolicies\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CnnPolicy, MlpPolicy, MultiInputPolicy\n\u001b[1;32m      4\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCnnPolicy\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMlpPolicy\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMultiInputPolicy\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA2C\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/stable_baselines3/a2c/a2c.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Any, ClassVar, Dict, Optional, Type, TypeVar, Union\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mth\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgymnasium\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m spaces\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m functional \u001b[38;5;28;01mas\u001b[39;00m F\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/__init__.py:237\u001b[0m\n\u001b[1;32m    235\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m USE_GLOBAL_DEPS:\n\u001b[1;32m    236\u001b[0m         _load_global_deps()\n\u001b[0;32m--> 237\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_C\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# noqa: F403\u001b[39;00m\n\u001b[1;32m    239\u001b[0m \u001b[38;5;66;03m# Appease the type checker; ordinarily this binding is inserted by the\u001b[39;00m\n\u001b[1;32m    240\u001b[0m \u001b[38;5;66;03m# torch._C module initialization code in C\u001b[39;00m\n\u001b[1;32m    241\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m TYPE_CHECKING:\n",
+      "\u001b[0;31mImportError\u001b[0m: dlopen(/Users/hissain/anaconda3/lib/python3.11/site-packages/torch/_C.cpython-311-darwin.so, 2): Library not loaded: @loader_path/libtorch_cpu.dylib\n  Referenced from: /Users/hissain/anaconda3/lib/python3.11/site-packages/torch/lib/libtorch_python.dylib\n  Reason: image not found"
+     ]
+    }
+   ],
+   "source": [
+    "from stable_baselines3 import PPO\n",
+    "\n",
+    "# Train the agent\n",
+    "model = PPO(\"MlpPolicy\", env, verbose=1)\n",
+    "model.learn(total_timesteps=10000)\n",
+    "\n",
+    "# Save the model\n",
+    "model.save(\"dx_ball_model\")"
    ]
   }
  ],
