refactored RAG code

--- a/codes/RAG_web_scrap_secure_single.ipynb
+++ b/codes/RAG_web_scrap_secure_single.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "b2643936",
    "metadata": {
     "scrolled": true
@@ -18,12 +18,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67c97d081296466e950e02da732f8231",
+       "model_id": "206d2983297346088bddb584b4fb8082",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
+       "Scraping items:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f0d46f99a2246ae81a26d3dd60e9eef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Partitioning text:   0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -33,61 +47,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "partition length: 4\n",
-      "Embedding dimension: (3072,)\n",
-      "embedding_sample dimension: 3072\n",
-      "Embedding partition 1 of 4\n",
-      "Embedding dimension: (3072,)\n",
-      "Embedding partition 2 of 4\n",
-      "Embedding dimension: (3072,)\n",
-      "Embedding partition 3 of 4\n",
-      "Embedding dimension: (3072,)\n",
-      "Embedding partition 4 of 4\n",
-      "Embedding dimension: (3072,)\n"
+      "Total partition count: 5\n",
+      "Models embedding dimension: 3072\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'IndexFlatL2' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 170\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;66;03m# Store the partitions in FAISS\u001b[39;00m\n\u001b[1;32m    169\u001b[0m faiss_index, doc_ids \u001b[38;5;241m=\u001b[39m store_in_faiss(partitions, embedding_func\u001b[38;5;241m=\u001b[39mget_embedding)\n\u001b[0;32m--> 170\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindices length: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(faiss_index)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, doc_ids length: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(doc_ids)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    172\u001b[0m \u001b[38;5;66;03m# Query and retrieval with RAG\u001b[39;00m\n\u001b[1;32m    173\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhere is the location of Bangladesh?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'IndexFlatL2' has no len()"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7819f39b12774c84b279a355e6a70d21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Embedding partitions:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "import time\n",
+    "import faiss\n",
+    "import json\n",
     "import requests\n",
+    "import numpy as np\n",
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from urllib.parse import urljoin\n",
-    "import time\n",
-    "import faiss\n",
-    "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
-    "import json\n",
+    "\n",
+    "ollama_url_inf = \"http://localhost:11434/api/show\"\n",
+    "ollama_url_emb = \"http://localhost:11434/api/embeddings\"\n",
+    "ollama_url_gen = \"http://localhost:11434/api/generate\"\n",
+    "ollama_model_name = \"llama3.2:latest\"\n",
+    "\n",
+    "base_url = 'https://en.wikipedia.org/wiki/Bangladesh'\n",
     "\n",
     "# Configure Selenium Chrome options\n",
     "chrome_options = Options()\n",
-    "chrome_options.add_argument('--headless')  # Run in headless mode\n",
+    "chrome_options.add_argument('--headless')\n",
     "chrome_options.add_argument('--disable-gpu')\n",
     "chrome_options.add_argument('--no-sandbox')\n",
     "chrome_options.add_argument('--disable-dev-shm-usage')\n",
     "\n",
-    "# Initialize the Chrome driver\n",
     "service = Service()\n",
     "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
     "\n",
     "def get_visitable_links(base_url):\n",
-    "    \"\"\"Scrapes all valid links from the base_url.\"\"\"\n",
     "    driver.get(base_url)\n",
-    "    time.sleep(3)\n",
+    "    time.sleep(1)\n",
     "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
-    "\n",
     "    links = []\n",
     "    for a_tag in soup.find_all('a', href=True):\n",
     "        full_url = urljoin(base_url, a_tag['href'])\n",
@@ -96,29 +108,20 @@
     "    return links\n",
     "\n",
     "def scrape_text_from_url(url):\n",
-    "    \"\"\"Scrapes the textual content from a given URL.\"\"\"\n",
-    "    response = requests.get(url)\n",
-    "    if response.status_code != 200:\n",
-    "        print(f\"Failed to retrieve {url}\")\n",
-    "        return \"\"\n",
-    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "    \n",
-    "    # Use get_text() without strip=True to preserve spaces between inline elements\n",
+    "    driver.get(url)\n",
+    "    time.sleep(1)\n",
+    "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
     "    text_content = ' '.join([p.get_text() for p in soup.find_all('p')])\n",
-    "    \n",
-    "    # Optionally, normalize excessive whitespace\n",
     "    text_content = ' '.join(text_content.split())\n",
-    "    \n",
     "    return text_content\n",
     "\n",
-    "def partition_text(text, max_length=512):\n",
-    "    \"\"\"Partitions the text into smaller parts to feed into RAG.\"\"\"\n",
+    "def partition_text(text, max_length):\n",
     "    sentences = text.split('. ')\n",
     "    partitions = []\n",
     "    current_part = []\n",
     "    current_length = 0\n",
     "    \n",
-    "    for sentence in sentences:\n",
+    "    for sentence in tqdm(sentences, desc=\"Partitioning text\"):\n",
     "        current_length += len(sentence.split())\n",
     "        current_part.append(sentence)\n",
     "        \n",
@@ -133,110 +136,133 @@
     "    return partitions\n",
     "\n",
     "\n",
-    "ollama_url_emb = \"http://localhost:11434/api/embeddings\"\n",
-    "ollama_url_gen = \"http://localhost:11434/api/generate\"\n",
+    "def get_embedding_shape():\n",
+    "    payload = { \"model\": ollama_model_name }\n",
+    "    headers = {\"Content-Type\": \"application/json\"}\n",
+    "    response = requests.post(ollama_url_inf, headers=headers, data=json.dumps(payload))\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        result = response.json()\n",
+    "        # Check if 'model_info' and 'embedding_length' exist in the response\n",
+    "        if 'model_info' in result and 'llama.embedding_length' in result['model_info']:\n",
+    "            embedding_length = result['model_info'][\"llama.embedding_length\"]\n",
+    "            return embedding_length\n",
+    "        else:\n",
+    "            print(\"Embedding length not found in the model info.\")\n",
+    "            return 0\n",
+    "    else:\n",
+    "        print(f\"Error from Ollama: {response.status_code}\")\n",
+    "        return 0\n",
     "\n",
     "def get_embedding(text):\n",
-    "    payload = {\n",
-    "        \"model\": \"llama3.2:latest\",\n",
-    "        \"prompt\": text\n",
-    "    }\n",
-    "    \n",
+    "    payload = { \"model\": ollama_model_name, \"prompt\": text}\n",
     "    headers = {\"Content-Type\": \"application/json\"}\n",
     "    response = requests.post(ollama_url_emb, headers=headers, data=json.dumps(payload))\n",
-    "    \n",
+    "\n",
     "    if response.status_code == 200:\n",
     "        result = response.json()\n",
     "        embedding = np.array(result['embedding'])\n",
-    "        print(f\"Embedding dimension: {embedding.shape}\")  # Add this line to check the embedding shape\n",
     "        return embedding\n",
     "    else:\n",
     "        print(f\"Error from Ollama: {response.status_code}\")\n",
-    "        return np.zeros(768)  # Return zero vector on error (adjust dimension based on model)\n",
+    "        return np.zeros(768)  # (adjust dimension based on model)\n",
     "\n",
-    "def store_in_faiss(partitions, embedding_func):\n",
-    "    \"\"\"Stores document embeddings in a FAISS index.\"\"\"\n",
-    "    embedding_sample = embedding_func(partitions[0])  # Get one embedding to check dimension\n",
-    "    dimension = embedding_sample.shape[0]  # Automatically determine dimension\n",
-    "    print(f\"embedding_sample dimension: {dimension}\")\n",
+    "def store_in_faiss(partitions):\n",
+    "    dimension = get_embedding_shape()\n",
+    "    print(f\"Models embedding dimension: {dimension}\")\n",
     "    index = faiss.IndexFlatL2(dimension)  # L2 distance\n",
     "\n",
     "    doc_vectors = []\n",
     "    doc_ids = []\n",
     "    \n",
-    "    for i, partition in enumerate(partitions):\n",
-    "        print(f\"Embedding partition {i+1} of {len(partitions)}\")  # Debugging line to trace embedding calls\n",
-    "        embedding = embedding_func(partition)  # Calling get_embedding()\n",
-    "        index.add(np.array([embedding]))  # Add to FAISS index\n",
+    "    for i, partition in tqdm(enumerate(partitions), total=len(partitions), desc=\"Embedding partitions\"):\n",
+    "        embedding = get_embedding(partition)\n",
+    "        index.add(np.array([embedding]))\n",
     "        doc_vectors.append(embedding)\n",
     "        doc_ids.append(i)\n",
     "    \n",
     "    return index, doc_ids\n",
     "\n",
-    "def retrieve_with_rag(query, faiss_index, doc_ids):\n",
+    "def retrieve_with_rag(query, faiss_index, doc_ids, k=2):\n",
     "    query_embedding = get_embedding(query)\n",
-    "    print(f'embedding length: {len(query_embedding)}')\n",
-    "    \n",
-    "    # Search in FAISS index\n",
-    "    print(\"Performing FAISS search...\")\n",
-    "    D, I = faiss_index.search(np.array([query_embedding]), k=2)  # Retrieve top-1 closest documents\n",
-    "    print(f\"FAISS search done. D: {D}, I: {I}\")\n",
-    "\n",
-    "    # Check if FAISS returned valid results\n",
-    "    if len(I) == 0 or len(I[0]) == 0:\n",
-    "        print(\"No documents found.\")\n",
-    "        return\n",
-    "    \n",
-    "    # For simplicity, concatenate the closest documents and feed to RAG\n",
+    "    distances, indices = faiss_index.search(np.array([query_embedding]), k=k)  # Retrieve top-1 closest documents\n",
     "    retrieved_docs = []\n",
-    "    for i in I[0]:\n",
+    "    for i in indices[0]:\n",
     "        if i >= len(partitions):\n",
-    "            print(f\"Index {i} out of bounds for partition list.\")\n",
+    "            print(f\"WARN: Index {i} out of bounds for partition list.\")\n",
     "            continue\n",
     "        doc_id = doc_ids[i]\n",
-    "        retrieved_docs.append(partitions[doc_id])  # Get the document text from partition list\n",
-    "    \n",
+    "        retrieved_docs.append(partitions[doc_id])\n",
     "    combined_docs = \"\\n\".join(retrieved_docs)\n",
-    "    print(f\"Retrieved docs: {combined_docs}\")\n",
-    "    \n",
-    "    # Perform RAG with retrieved docs\n",
     "    rag_prompt = f\"Context:\\n{combined_docs}\\n\\nQuery: {query}\\nAnswer:\"\n",
-    "    print(f\"RAG Prompt: {rag_prompt}\")\n",
-    "    \n",
-    "    response = requests.post(ollama_url_gen, headers={\"Content-Type\": \"application/json\"},\n",
-    "                             data=json.dumps({\"model\": \"llama3.2:latest\", \"prompt\": rag_prompt}))\n",
-    "    \n",
-    "    print(response)\n",
-    "    if response.status_code == 200:\n",
-    "        return response.json()[\"completion\"]\n",
-    "    else:\n",
-    "        return f\"Error from Ollama: {response.status_code}\"\n",
+    "    payload = {\"model\": ollama_model_name, \"prompt\": rag_prompt, \"stream\": False}\n",
+    "    response = requests.post(ollama_url_gen, headers={\"Content-Type\": \"application/json\"}, \n",
+    "                             data=json.dumps(payload))\n",
+    "    return response.json()\n",
     "\n",
-    "    \n",
-    "# Main logic to scrape and partition data\n",
-    "base_url = 'https://en.wikipedia.org/wiki/Bangladesh'\n",
     "valid_links = get_visitable_links(base_url)[1:4]\n",
-    "\n",
     "print(f\"Found {len(valid_links)} valid links. Scraping the content...\")\n",
     "\n",
-    "# Scrape text content from all valid links\n",
     "all_text = \"\"\n",
-    "for link in tqdm(valid_links):\n",
+    "for link in tqdm(valid_links, desc=\"Scraping items\"):\n",
     "    text_content = scrape_text_from_url(link)\n",
     "    all_text += text_content + \"\\n\\n\"\n",
-    "    \n",
-    "# Partition the text\n",
+    "\n",
     "partitions = partition_text(all_text, max_length=512)\n",
-    "print(f'partition length: {len(partitions)}')\n",
+    "print(f'Total partition count: {len(partitions)}')\n",
     "\n",
     "# Store the partitions in FAISS\n",
-    "faiss_index, doc_ids = store_in_faiss(partitions, embedding_func=get_embedding)\n",
-    "\n",
-    "# Query and retrieval with RAG\n",
-    "query = \"Where is the location of Bangladesh?\"\n",
+    "faiss_index, doc_ids = store_in_faiss(partitions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "acf96b50",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: Where is Bangladesh located? \n",
+      "\n",
+      "RAG Response:\n",
+      "Bangladesh is a country in South Asia, centered on the transnational historical region of Bengal along the eponymous bay.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"Where is Bangladesh located?\"\n",
     "rag_response = retrieve_with_rag(query, faiss_index, doc_ids)\n",
-    "\n",
-    "print(f\"RAG Response:\\n{rag_response}\")\n",
+    "answer = rag_response[\"response\"]\n",
+    "print(f\"Query: {query} \\n\\nRAG Response:\\n{answer}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c6d278d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: Who is the father of Bangladesh? \n",
+      "\n",
+      "RAG Response:\n",
+      "The text does not mention who is considered the \"father\" of Bangladesh. It does provide information about the country's history, culture, and demographics, but it does not include any specific information about a person being referred to as the \"father\" of Bangladesh.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"Who is the father of Bangladesh?\"\n",
+    "rag_response = retrieve_with_rag(query, faiss_index, doc_ids)\n",
+    "answer = rag_response[\"response\"]\n",
+    "print(f\"Query: {query} \\n\\nRAG Response:\\n{answer}\")\n",
     "\n",
     "# Close the Selenium browser\n",
     "#driver.quit()"
